# mongoPyCrud

./: README.md  docker-compose.yml  pyproject.toml
mongopycrud/: __init__.py  main.py  model.py  models.py  routes.py
